--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,7 @@ defaults:
       layout: default
       is_post: true # automatically set is_post=true for all posts
 
+# needed for the RSS feed, but may also be useful for other purposes
+name:         Delta Chat
+description:  Instant messanging based on email
+url:          https://delta.chat
