--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,7 @@ defaults:
 name:         Delta Chat
 description:  Instant messanging based on email
 url:          https://delta.chat
+
+# add plugins
+gems:
+  - jekyll-sitemap
