fix include syntax

--- a/_config.yml
+++ b/_config.yml
@@ -23,5 +23,5 @@ plugins:
   - jekyll-sitemap
 
 # forward the _redirects file to the netlify-site directory
-include: _redirects
+include: ["_redirects"]
 
