--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ _site/
 
 # ignore private scripts and directories, eg. jekyll-build-local.prv.sh
 *.prv*
+
+# transifex temporary files
+tools/.tx/
+tools/translations/
