--- a/tools/.tx/config
+++ b/tools/.tx/config
@@ -36,3 +36,38 @@ file_filter = translations/delta-chat-pages.imprintmd/<lang>.md
 source_lang = en
 type = GITHUBMARKDOWN
 
+[delta-chat-pages.blogpo]
+file_filter = translations/delta-chat-pages.blogpo/<lang>.po
+source_lang = en
+type = PO
+
+[delta-chat-pages.contributepo]
+file_filter = translations/delta-chat-pages.contributepo/<lang>.po
+source_lang = en
+type = PO
+
+[delta-chat-pages.downloadpo]
+file_filter = translations/delta-chat-pages.downloadpo/<lang>.po
+source_lang = en
+type = PO
+
+[delta-chat-pages.featurespo]
+file_filter = translations/delta-chat-pages.featurespo/<lang>.po
+source_lang = en
+type = PO
+
+[delta-chat-pages.helppo]
+file_filter = translations/delta-chat-pages.helppo/<lang>.po
+source_lang = en
+type = PO
+
+[delta-chat-pages.imprintpo]
+file_filter = translations/delta-chat-pages.imprintpo/<lang>.po
+source_lang = en
+type = PO
+
+[delta-chat-pages.indexpo]
+file_filter = translations/delta-chat-pages.indexpo/<lang>.po
+source_lang = en
+type = PO
+
