--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -15,14 +15,14 @@ jobs:
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
     - name: Upload
-      uses: appleboy/scp-action@master
-      env:
-        USERNAME: ${{ secrets.USERNAME }}
-        KEY: ${{ secrets.KEY }}
-        HOST: "37.218.242.41"
-        PORT: 22
-        SOURCE: "_site/*"
-        TARGET: "/var/www/html/_site/${{ github.sha }}/"
+      uses: horochx/deploy-via-scp@v1.0.1
+      with:
+        user: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        host: "37.218.242.41"
+        port: 22
+        local: "_site/*"
+        remote: "/var/www/html/_site/${{ github.sha }}/"
     - name: "post Link"
       uses: rytswd/respost@v0.1.0
       with:
