--- a/.github/workflows/jekyll-master.yml
+++ b/.github/workflows/jekyll-master.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         user: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
-        host: "37.218.242.41"
+        host: "delta.chat"
         port: 22
         local: "_site"
         remote: "/var/www/html/"
