--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         user: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
-        host: "37.218.242.41"
+        host: "delta.chat"
         port: 22
         local: "-p _site"
         remote: "/var/www/html/_site/${{ github.sha }}/"
@@ -27,6 +27,6 @@ jobs:
       uses: rytswd/respost@v0.1.0
       with:
         title: "Preview changes"
-        body: "Preview at: http://37.218.242.41/${{ github.sha }}/"
+        body: "Preview at: https://delta.chat/${{ github.sha }}/"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
