--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -29,13 +29,13 @@ jobs:
         host: "delta.chat"
         port: 22
         local: "-p _site"
-        remote: "/var/www/html/_site/{{ steps.prepare.outputs.prid }}"
+        remote: "/var/www/html/_site/${{ steps.prepare.outputs.prid }}"
     - name: "Post links to details"
       if: steps.prepare.outputs.uploadtoserver
       run: |
         # URLs for API connection and uploads
         export GITHUB_API_URL="https://api.github.com/repos/deltachat/deltachat-desktop/statuses/${{ github.event.after }}"
-        export PREVIEW_LINK="https://delta.chat/{{ steps.prepare.outputs.prid }}/"
+        export PREVIEW_LINK="https://delta.chat/${{ steps.prepare.outputs.prid }}/"
         # Post AppImage download link to check details
         export STATUS_DATA="{\"state\": \"success\", \
                              \"description\": \"Preview the page here:\", \
