rsync: --delete does not work without --recursive (-r) or --dirs (-d).

--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -32,5 +32,5 @@ jobs:
         FOLDER: ${{ steps.getid.outputs.prid }}
         SERVER_IP: delta.chat
         SERVER_DESTINATION: /var/www/html/_site/${{ steps.getid.outputs.prid }}
-        ARGS: --delete -vh
+        ARGS: --delete -vhr
 
