--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -34,7 +34,8 @@ jobs:
       if: steps.prepare.outputs.uploadtoserver
       run: |
         # URLs for API connection and uploads
-        export GITHUB_API_URL="https://api.github.com/repos/deltachat/deltachat-pages/statuses/${{ github.event.after }}"
+        export SHA=$(jq .pull_request.head.sha < $GITHUB_EVENT_PATH)
+        export GITHUB_API_URL="https://api.github.com/repos/deltachat/deltachat-pages/statuses/$SHA"
         export PREVIEW_LINK="https://delta.chat/${{ steps.prepare.outputs.prid }}/"
         # Post AppImage download link to check details
         export STATUS_DATA="{\"state\": \"success\", \
