fix no headers in blog

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ defaults:
       type: posts   # limit to posts
     values:
       is_post: true # automatically set is_post=true for all posts
+      lang: en
 
 kramdown: 
     auto_ids: true  # auto-generate ID's for headings
