--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ _site/
 
 # ignore tools/tranlations, we copy the files to the corresponding language directories
 tools/translations/
+tools/.tx/
 
 build/
 
