add verify-downloads.md correctly

--- a/tools/.tx/config
+++ b/tools/.tx/config
@@ -40,3 +40,8 @@ type = PO
 file_filter = translations/delta-chat-pages.referencespo/<lang>.po
 source_lang = en
 type = PO
+
+[delta-chat-pages.verifiy-downloadspo]
+file_filter = translations/delta-chat-pages.verify-downloadspo/<lang>.po
+source_lang = en
+type = PO
