added page to transifex

--- a/tools/.tx/config
+++ b/tools/.tx/config
@@ -16,6 +16,11 @@ file_filter = translations/delta-chat-pages.downloadpo/<lang>.po
 source_lang = en
 type = PO
 
+[delta-chat-pages.gdpr-websitepo]
+file_filter = translations/delta-chat-pages.gdpr-websitepo/<lang>.po
+source_lang = en
+type = PO
+
 [delta-chat-pages.gdprpo]
 file_filter = translations/delta-chat-pages.gdprpo/<lang>.po
 source_lang = en
