--- a/.github/workflows/tx-push.yml
+++ b/.github/workflows/tx-push.yml
@@ -21,6 +21,7 @@ jobs:
         pip install massedit
     - name: tx init
       run: |
+        echo "${{ secrets.transifexrc }}" > ~/.transifexrc
         tx init --user=api --pass=${{ secrets.TXapitoken }}
         tx set --auto-remote https://www.transifex.com/projects/p/delta-chat-pages/
     - name: tx push
