--- a/.github/workflows/tx-push.yml
+++ b/.github/workflows/tx-push.yml
@@ -22,8 +22,8 @@ jobs:
     - name: tx init
       run: |
         echo "${{ secrets.transifexrc }}" > ~/.transifexrc
-        tx init --user=api --pass=${{ secrets.TXapitoken }}
-        tx set --auto-remote https://www.transifex.com/projects/p/delta-chat-pages/
+        #tx init --user=api --pass=${{ secrets.TXapitoken }}
+        #tx set --auto-remote https://www.transifex.com/projects/p/delta-chat-pages/
     - name: tx push
       run: |
         tools/t-dance.sh push
