only tx-push from the master branch.

--- a/.github/workflows/tx-push.yml
+++ b/.github/workflows/tx-push.yml
@@ -25,5 +25,8 @@ jobs:
         #tx set --auto-remote https://www.transifex.com/projects/p/delta-chat-pages/
     - name: tx push
       run: |
+        git checkout master
+        git pull origin master
+        git status
         tools/t-dance.sh push
 
