build previews with baseurl

--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
+        jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future --baseurl /${{ steps.prepare.outputs.prid }}/"
         mkdir ${{ steps.prepare.outputs.prid }}
     - name: Create folder if it doesn't exist
       if: steps.prepare.outputs.uploadtoserver
