fix typo, tune down wording

--- a/_data/meta.yml
+++ b/_data/meta.yml
@@ -1,4 +1,4 @@
 # needed for the RSS feed, but may also be useful for other purposes
 name:         Delta Chat
-description:  Instant messanging based on email
+description:  Messenger based on e-mail
 url:          https://delta.chat
