add fr to local help generation and tell jekyll to ignore the optionional venv folder

--- a/_config.yml
+++ b/_config.yml
@@ -30,4 +30,4 @@ plugins:
   - jekyll-sitemap
 
 # the tools directory contains cached files downloaded from transifex, ignore it
-exclude: ["tools"]
+exclude: ["tools", "venv"]
