--- a/tools/.tx/config
+++ b/tools/.tx/config
@@ -6,6 +6,11 @@ file_filter = translations/delta-chat-pages.blogpo/<lang>.po
 source_lang = en
 type = PO
 
+[delta-chat-pages.community-standardspo]
+file_filter = translations/delta-chat-pages.community-standardspo/<lang>.po
+source_lang = en
+type = PO
+
 [delta-chat-pages.contributepo]
 file_filter = translations/delta-chat-pages.contributepo/<lang>.po
 source_lang = en
