disable tx-push workflow until we know the new tx tool works as expected and is used by CI (otoh, the force-push to transifex was questionable anyway, as often translations are started too soon, eg. before typos are fixed)

--- a/.github/workflows/tx-push.yml
+++ b/.github/workflows/tx-push.yml
@@ -3,7 +3,9 @@ name: Push new strings to Transifex
 on: 
   push:
     branches:
-      - master
+      # if we made sure, the new tx-tool works and is used by CI, we can switch back to branch "master"
+      # (is there a less hacky way to disable a workflow?)
+      - master-disabled
 
 jobs:
   push-translations:
