include .well-known directory

--- a/_config.yml
+++ b/_config.yml
@@ -29,5 +29,8 @@ sass:
 plugins:
   - jekyll-sitemap
 
+# include .well-known for flathub verification
+include: [".well-known"]
+
 # the tools directory contains cached files downloaded from transifex, ignore it
 exclude: ["tools", "venv"]
