use new fork, original action is unmaintained

--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -24,7 +24,7 @@ jobs:
         # create empty file to copy it over the outdated deliverable on download.delta.chat
         echo "This preview is outdated and has been removed." > ${{ steps.getid.outputs.prid }}/index.html
     - name: Replace build with error message
-      uses: AEnterprise/rsync-deploy@v1.0
+      uses: tohn/rsync-deploy@v1.1
       env:
         DEPLOY_KEY: ${{ secrets.KEY }}
         USERNAME: ${{ secrets.USERNAME }}
