--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -62,10 +62,8 @@ jobs:
                              \"description\": \"Preview the page here:\", \
                              \"context\": \"Page Preview\", \
                              \"target_url\": \"${PREVIEW_LINK}\"}"
-        export RESPONSE=$(curl -X POST --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --url "$GITHUB_API_URL" --header "content-type: application/json" --data "$STATUS_DATA" | jq -r .message)
-        if [ "$RESPONSE" == "Not Found" ]; then echo ::set-output name=comment::true ;fi
+        curl -X POST --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --url "$GITHUB_API_URL" --header "content-type: application/json" --data "$STATUS_DATA" | jq -r .message
     - name: "Post link to comments"
-      if: steps.details.outputs.comment
       uses: rytswd/respost@v0.1.0
       with:
         body: "Check out the page preview at https://staging.delta.chat/${{ steps.prepare.outputs.prid }}/en/"
