--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -56,7 +56,7 @@ jobs:
           export RESPONSE=$(curl -L --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --url "$GITHUB_API_URL" --header "content-type: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28")
           echo $RESPONSE > result
           cat result
-          if [ ! grep '"Check out the page preview at https://staging.delta.chat/' result ]; then echo ::set-output name=comment::true ;fi
+          grep -v '"Check out the page preview at https://staging.delta.chat/' result && echo ::set-output name=comment::true ;fi
       - name: "Post link to comments"
         if: steps.details.outputs.comment
         uses: actions/github-script@v6
