--- a/.github/workflows/jekyll-preview.yml
+++ b/.github/workflows/jekyll-preview.yml
@@ -55,7 +55,7 @@ jobs:
           export GITHUB_API_URL="https://api.github.com/repos/deltachat/deltachat-pages/issues/${{ steps.prepare.outputs.prid }}/comments"
           export RESPONSE=$(curl -L --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --url "$GITHUB_API_URL" --header "content-type: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28")
           echo $RESPONSE > result
-          grep -v '"Check out the page preview at https://staging.delta.chat/' result && echo ::set-output name=comment::true
+          grep -v '"Check out the page preview at https://staging.delta.chat/' result && echo ::set-output name=comment::true || true
       - name: "Post link to comments"
         if: steps.details.outputs.comment
         uses: actions/github-script@v6
